fixed overlapping numberlabels by using a single one for both words, made use of arrow keys and mouseclicks favor keeping the current word selected

--- a/src/player.scss
+++ b/src/player.scss
@@ -398,20 +398,6 @@ input {
 	text-align: right;
 }
 
-.numberlabel_left {
-	color: #333;
-	font-size: 10px;
-	position: absolute;
-	pointer-events: none;
-	display: block;
-	width: 25px;
-	margin: 0px;
-	margin-top:9px;
-	margin-left: 3px;
-	z-index: 1;
-	text-align: left;
-}
-
 #backgroundcover {
 	position: fixed;
 	top: 0px;
